--- a/index.html
+++ b/index.html
@@ -23,6 +23,19 @@
         <div class="color-option" style="background-color: #2ecc71" data-color="#2ecc71"></div>
         <div class="color-option" style="background-color: #e67e22" data-color="#e67e22"></div>
     </div>
+    <canvas></canvas>
+    <div class="btns">
+        <input id="line-width" type="range" min="1" max="10" value="5" step="0.1" />
+        <button id="mode-btn">🩸 Fill</button>
+        <button id="destroy-btn">💣 Destroy</button>
+        <button id="eraser-btn">❌ Erase</button>
+        <label for="file">
+            💅🏻 Add Photo
+            <input type="file" accept="image/*" id="file" /></label>
+        <input type="text" id="text" placeholder="Add text here... :)" />
+        <button id="save"> Save image</button>
+    </div>
+    <script src="app.js"></script>
 
 </body>
 
